# advanced-nas-server

./: CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
database/: users.db  users.sqbpro
front/: data.html  index.html  login.css  login.html  login.js  storage.css  storage.html  storage.js  style.css
include/: config.h  core.h  db.h  http.h  logger.h
src/: core.c  db.c  http.c  logger.c  main.c
